Added branch for model validation and testing.

--- a/OpportunisticCellularNetwork/simulations/omnetpp.ini
+++ b/OpportunisticCellularNetwork/simulations/omnetpp.ini
@@ -1,11 +1,12 @@
 [General]
 network = OpportunisticCellularNetwork
-sim-time-limit = 300s
+sim-time-limit = 3s
+
 #debug-on-errors = true
 
 # +-------------------------------------------------------------------------------+
 #  Scenario: queues of infinite dimension.
-**.population             = 20
+**.population             = 4
 **.antenna.stage          = 0
 **.antenna.timeslot       = 1 ms
 **.antenna.queueDimension = 0
@@ -32,3 +33,36 @@ num-rngs = 3
 **.source[*].rng-0   = 1
 ** source[*].rng-1   = 2
 # +-------------------------------------------------------------------------------+
+
+[TEST1]
+warmup-period = 0.5s
+**.population = 1
+**.cellular[*].CQI = 15
+
+
+[Validation0]
+
+repeat = 5 
+**.source[*].rate = 1
+
+**.population = 2
+**.cellular[0].CQI = 1
+**.cellular[1].CQI = 2
+**.cellular[2].CQI = 3
+**.cellular[3].CQI = 4
+**.cellular[4].CQI = 5
+**.cellular[5].CQI = 6
+**.cellular[6].CQI = 7
+**.cellular[7].CQI = 8
+**.cellular[8].CQI = 9
+**.cellular[9].CQI = 10
+
+[Validation1]
+
+**.source[*].rate = 20
+**.population = 4
+**.cellular[0].CQI = 7
+**.cellular[1].CQI = 8
+**.cellular[2].CQI = 13
+**.cellular[3].CQI = 14
+
